src/verse/grammar/verse-grammar.pegjs
/**
 * verse-grammar.pegjs
 *
 * Peggy grammar for a subset of the Verse programming language.
 * Vendorized from johanfortus/Verse-Online-Editor (MIT) and extended with
 * source-location tracking on statements (used for breakpoints, stepping,
 * and runtime error reporting).
 *
 * Regenerate the parser with: npm run build:parser
 */

{

 function Program(body) { return { type: "Program", body: body }; }

 function UsingDeclaration(path) { return { type: "UsingDeclaration", path: path }; }

 function VariableDeclaration(name, varType, value) { return { type: "VariableDeclaration", name: name, varType: varType, value: value }; }

 function ConstDeclaration(name, constType, value) { return { type: "ConstDeclaration", name: name, constType: constType, value: value }; }

 function ClassDefinition(name, parentClass, members) { return { type: "ClassDefinition", name: name, parentClass: parentClass, members: members }; }

 function SetStatement(name, operator, value) { return { type: "SetStatement", name: name, operator: operator, value: value }; }

 function PrintStatement(value) { return { type: "PrintStatement", value: value }; }

 function InterpolatedString(parts) { return { type: "InterpolatedString", parts: parts }; }

 function TextPart(text) { return { type: "TextPart", text: text }; }

 function InterpolatedExpression(expression) { return { type: "InterpolatedExpression", expression: expression }; }

 function StringLiteral(value) { return { type: "StringLiteral", value: value }; }

 function IntegerLiteral(value) { return { type: "IntegerLiteral", value: parseInt(value, 10) }; }

 function FloatLiteral(value) { return { type: "FloatLiteral", value: parseFloat(value) }; }

 function BooleanLiteral(value) { return { type: "BooleanLiteral", value }; }

 function Identifier(name) { return { type: "Identifier", name: name }; }

 function Type(name) { return { type: "Type", name: name }; }

 function BinaryExpression(left, operator, right) { return { type: "BinaryExpression", left: left, operator: operator, right: right }; }

 function UnaryExpression(operator, expression) { return { type: "UnaryExpression", operator: operator, expression: expression }; }

 function IfStatement(condition, body, elseBody) { return { type: "IfStatement", condition: condition, body: body, elseBody: elseBody || [] }; }

 function LoopStatement(body) { return { type: "LoopStatement", body: body }; }

 function ForStatement(variable, varType, start, end, body) { return { type: "ForStatement", variable: variable, varType: varType, range: {type : "Range", start, end}, body: body }; }

 function Range(start, end) { return { type: "Range", start, end }; }

 function BreakStatement() { return { type: "BreakStatement" }; }

 function ArrayLiteral(elements) { return { type: "ArrayLiteral", elements: elements || [] }; };

 function ArrayType(elementType) { return { type: "ArrayType", elementType: elementType }; }

 function ArrayAccess(array, index) { return { type: "ArrayAccess", array: array, index: index }; }

 function FunctionDeclaration(name, parameters, returnType, body, effects) { return { type: "FunctionDeclaration", name: name, parameters: parameters, returnType: returnType, body: body, effects: effects || [] }; }

 function Parameter(name, paramType) { return { type: "Parameter", name: name, paramType: paramType }; }

 function FunctionCall(name, args, usesBrackets) { return { type: "FunctionCall", name: name, arguments: args, usesBrackets: !!usesBrackets }; }

 function ReturnStatement(value) { return { type: "ReturnStatement", value: value }; }

 function FunctionCallStatement(functionCall) { return { type: "FunctionCallStatement", functionCall: functionCall }; }

 function ExpressionStatement(expression) { return { type: "ExpressionStatement", expression: expression }; }

 function BraceBlock(body) { return body; }

}

/* ============ PEGGY GRAMMAR DEFINITIONS ============ */

Start
 = Program

Program
 = _ statements:TopLevelStatement* _ { return Program(statements); }

TopLevelStatement
 = UsingDeclaration
 / Statement

// Every statement carries `loc` (Peggy location) so the interpreter can map
// execution back to source lines for breakpoints and error messages.
Statement
 = statement:StatementBody {
 if (statement && typeof statement === 'object' && !statement.loc) {
 statement.loc = location();
 }
 return statement;
 }

StatementBody
 = FunctionDeclaration
 / VariableDeclaration
 / ClassDefinition
 / ConstDeclaration
 / SetStatement
 / PrintStatement
 / IfStatement
 / LoopStatement
 / ForStatement
 / BreakStatement
 / ReturnStatement
 / FunctionCallStatement
 / ExpressionStatement

UsingDeclaration
 = "using" _ "{" _ path:ModulePath _ "}" _ {
 const declaration = UsingDeclaration(path);
 declaration.loc = location();
 return declaration;
 }

ModulePath
 = path:$("/" [a-zA-Z0-9._]+ ("/" [a-zA-Z0-9._]+)*) {
 return path;
 }

Identifier
 = !ReservedKeyword h:[a-zA-Z_] t:[a-zA-Z0-9_]* {
 return { type: "Identifier", name: h + t.join('') };
 }

ReservedKeyword
 = "array"
 / "break"
 / "class"
 / "else"
 / "end"
 / "false"
 / "for"
 / "if"
 / "loop"
 / "Print"
 / "return"
 / "set"
 / "true"
 / "using"
 / "var"

VariableDeclaration
 = "var" _ name:Identifier _ ":" _ varType:(Type / ArrayType) _ "=" _ value:Expression _ {
 return VariableDeclaration(name, varType, value);
 }

ConstDeclaration
 = name:Identifier _ ":=" _ value:Expression _ {
 return ConstDeclaration(name, null, value);
 }
 / name:Identifier _ ":" _ constType:(Type / ArrayType) _ "=" _ value:Expression _ {
 return ConstDeclaration(name, constType, value);
 }

ClassDefinition
 = name:Identifier _ ":=" _ "class" _ "(" _ parentClass:Identifier _ ")" _ ":" _ members:Statement+ "end" _ {
 return ClassDefinition(name, parentClass, members);
 }
 / name:Identifier _ ":=" _ "class" _ "(" _ parentClass:Identifier _ ")" members:BraceBlock {
 return ClassDefinition(name, parentClass, members);
 }

SetStatement
 = "set" _ name:Identifier arrayIndex:("[" _ Expression _ "]")? _ operator:AssignmentOperator _ value:Expression _ {
 const target = arrayIndex ? ArrayAccess(name, arrayIndex[2]) : name;
 return SetStatement(target, operator, value);
 }

PrintStatement
 = "Print" _ "(" _ value:(InterpolatedString / Expression) _ ")" _ {
 return PrintStatement(value);
 }

IfStatement
 = "if" _ "(" _ condition:(AssignmentExpression / LogicalExpression) _ ")" _ ("then" _)? ":" _ body:Statement+ _ tail:ElseTail? _ "end" _ {
 return IfStatement(condition, body, tail || []);
 }
 / "if" _ ":" _ condition:(AssignmentExpression / LogicalExpression) _ "then" _ ":" _ body:Statement+ _ tail:ElseTail? _ "end" _ {
 return IfStatement(condition, body, tail || []);
 }
 / "if" _ "(" _ condition:(AssignmentExpression / LogicalExpression) _ ")" _ ("then" _)? body:BraceBlock _ "else" elseBody:BraceBlock {
 return IfStatement(condition, body, elseBody);
 }
 / "if" _ "(" _ condition:(AssignmentExpression / LogicalExpression) _ ")" _ ("then" _)? body:BraceBlock {
 return IfStatement(condition, body, []);
 }

ElseTail
 = "else" _ "if" _ "(" _ condition:(AssignmentExpression / LogicalExpression) _ ")" _ ":" _ body:Statement+ _ tail:ElseTail? {
 return [IfStatement(condition, body, tail || [])];
 }
 / "else" _ ":" _ elseBody:Statement+ {
 return elseBody;
 }

AssignmentExpression
 = variable:Identifier _ ":=" _ value:Expression {
 return { type: "AssignmentExpression", variable: variable, value: value };
 }

LoopStatement
 = "loop" _ ":" _ body:Statement+ "end" _ {
 return LoopStatement(body);
 }
 / "loop" body:BraceBlock {
 return LoopStatement(body);
 }

ForStatement
 = "for" _ "(" _ variable:Identifier _ ":=" _ start:Expression _ ".." _ end:Expression _ ")" _ ":" _ body:Statement+ "end" _ {
 return ForStatement(variable, null, start, end, body);
 }
 / "for" _ "(" _ variable:Identifier _ ":" _ varType:(Type / ArrayType) _ "=" _ start:Expression _ ".." _ end:Expression _ ")" _ ":" _ body:Statement+ "end" _ {
 return ForStatement(variable, varType, start, end, body);
 }
 / "for" _ "(" _ variable:Identifier _ ":=" _ start:Expression _ ".." _ end:Expression _ ")" body:BraceBlock {
 return ForStatement(variable, null, start, end, body);
 }
 / "for" _ "(" _ variable:Identifier _ ":" _ varType:(Type / ArrayType) _ "=" _ start:Expression _ ".." _ end:Expression _ ")" body:BraceBlock {
 return ForStatement(variable, varType, start, end, body);
 }


Range
 = start:IntegerLiteral _ ".." _ end:IntegerLiteral {
 return Range(start, end);
 }

BreakStatement
 = "break" _ { return BreakStatement(); }

InterpolatedString
 = '"' parts:InterpolatedPart* '"' { return InterpolatedString(parts); }

InterpolatedPart
 = TextPart
 / InterpolatedExpression

TextPart
 = text:$[^"{]+ { return TextPart(text); }

InterpolatedExpression
 = "{" _ expr:Expression _ "}" {
 return InterpolatedExpression(expr);
 }

Expression
 = LogicalExpression
 / ArrayLiteral

LogicalExpression
 = left:ComparisonExpression _ operator:LogicalOperator _ right:LogicalExpression {
 return BinaryExpression(left, operator, right);
 }
 / ComparisonExpression

ComparisonExpression
 = left:AdditiveExpression _ operator:ComparisonOperator _ right:ComparisonExpression {
 return BinaryExpression(left, operator, right);
 }
 / AdditiveExpression

AdditiveExpression
 = left:MultiplicativeExpression _ operator:AdditiveOperator _ right:AdditiveExpression {
 return BinaryExpression(left, operator, right);
 }
 / MultiplicativeExpression

MultiplicativeExpression
 = left:UnaryExpression _ operator:MultiplicativeOperator _ right:MultiplicativeExpression {
 return BinaryExpression(left, operator, right);
 }
 / UnaryExpression

UnaryExpression
 = operator:UnaryOperator _ expression:UnaryExpression {
 return UnaryExpression(operator, expression);
 }
 / PostfixExpression

PostfixExpression
 = expression:PrimaryExpression "." "Length" {
 return { type: "ArrayLength", array: expression };
 }
 / expression:PrimaryExpression "?" {
 return UnaryExpression("?", expression);
 }
 / PrimaryExpression

PrimaryExpression
 = FunctionCall
 / StringLiteral
 / FloatLiteral
 / IntegerLiteral
 / BooleanLiteral
 / ArrayAccess
 / Identifier
 / "(" _ expr:Expression _ ")" { return expr; }

LogicalOperator
 = "and" / "or"

ComparisonOperator
 = ">=" / "<=" / ">" / "<" / "="

AdditiveOperator
 = "+" / "-"

MultiplicativeOperator
 = "*" / "/"

UnaryOperator
 = "not"

AssignmentOperator
 = "=" / "+=" / "-=" / "*=" / "/=" {
 return text();
 }

StringLiteral
 = '"' value:$[^"]* '"' { return StringLiteral(value); }

IntegerLiteral
 = value:$("-"? [0-9]+) { return IntegerLiteral(value); }

FloatLiteral
 = value:$("-"? [0-9]+ "." [0-9]+) { return FloatLiteral(value); }

BooleanLiteral
 = "true" { return BooleanLiteral(true); }
 / "false" { return BooleanLiteral(false); }

ArrayLiteral
 = "array" _ "{" _ elements:ArrayElements? _ "}" {
 return ArrayLiteral(elements !== null ? elements : []);
 }

ArrayElements
 = head:Expression tail:(_ "," _ Expression)* {
 return [head, ...tail.map(item => item[3])];
 }

ArrayType
 = "[]" elementType:Type {
 return { type: "ArrayType", elementType };
 }

ArrayAccess
 = array:Identifier "[" _ index:Expression _ "]" {
 return { type: "ArrayAccess", array: array, index: index };
 }

Type
 = name:$("float" / "int" / "rational" / "string" / "logic" / "void") {
 return { type: "Type", name };
 }

FunctionDeclaration
 = name:Identifier preEffects:EffectSpecifier* _ "(" _ parameters:ParameterList? _ ")" _? postEffects:EffectSpecifier* _
 ":" _ returnType:(Type / ArrayType) _ "=" _ body:Statement+ "end" _ {
 return FunctionDeclaration(
 name,
 parameters || [],
 returnType,
 body,
 [...preEffects, ...postEffects]
 );
 }
 / name:Identifier preEffects:EffectSpecifier* _ "(" _ parameters:ParameterList? _ ")" _? postEffects:EffectSpecifier* _
 ":" _ returnType:(Type / ArrayType) _ "=" body:BraceBlock {
 return FunctionDeclaration(
 name,
 parameters || [],
 returnType,
 body,
 [...preEffects, ...postEffects]
 );
 }

BraceBlock
 = _ "{" _ body:Statement+ "}" _ {
 return BraceBlock(body);
 }

EffectSpecifier
 = "<" _ name:Identifier _ ">" { return name.name; }

ParameterList
 = head:Parameter tail:(_ "," _ Parameter)* {
 return [head, ...tail.map(item => item[3])];
 }

Parameter
 = name:Identifier _ ":" _ paramType:(Type / ArrayType) {
 return Parameter(name, paramType);
 }

ReturnType
 = returnType:(Type / ArrayType) {
 return returnType;
 }

FunctionCall
 = name:Identifier _ "(" _ args:ArgumentList? _ ")" {
 return FunctionCall(name, args || [], false);
 }
 / name:Identifier "[" _ args:ArgumentList? _ "]" {
 return FunctionCall(name, args || [], true);
 }

ArgumentList
 = head:Expression tail:(_ "," _ Expression)* {
 return [head, ...tail.map(item => item[3])];
 }

ReturnStatement
 = "return" _ value:Expression? _ {
 return ReturnStatement(value);
 }

FunctionCallStatement
 = functionCall:FunctionCall _ {
 return FunctionCallStatement(functionCall);
 }

ExpressionStatement
 = expression:Expression _ {
 return ExpressionStatement(expression);
 }

_ "whitespace"
 = ([ \t\n\r] / "#" [^\r\n]*)*
