src/verse/parser.js
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Start: peg$parseStart };
  var peg$startRuleFunction = peg$parseStart;

  var peg$c0 = "using";
  var peg$c1 = "{";
  var peg$c2 = "}";
  var peg$c3 = "/";
  var peg$c4 = "array";
  var peg$c5 = "break";
  var peg$c6 = "class";
  var peg$c7 = "else";
  var peg$c8 = "end";
  var peg$c9 = "false";
  var peg$c10 = "for";
  var peg$c11 = "if";
  var peg$c12 = "loop";
  var peg$c13 = "Print";
  var peg$c14 = "return";
  var peg$c15 = "set";
  var peg$c16 = "true";
  var peg$c17 = "var";
  var peg$c18 = ":";
  var peg$c19 = "=";
  var peg$c20 = ":=";
  var peg$c21 = "(";
  var peg$c22 = ")";
  var peg$c23 = "[";
  var peg$c24 = "]";
  var peg$c25 = "then";
  var peg$c26 = "..";
  var peg$c27 = "\"";
  var peg$c28 = ".";
  var peg$c29 = "Length";
  var peg$c30 = "?";
  var peg$c31 = "and";
  var peg$c32 = "or";
  var peg$c33 = ">=";
  var peg$c34 = "<=";
  var peg$c35 = "not";
  var peg$c36 = "+=";
  var peg$c37 = "-=";
  var peg$c38 = "*=";
  var peg$c39 = "/=";
  var peg$c40 = "-";
  var peg$c41 = ",";
  var peg$c42 = "[]";
  var peg$c43 = "float";
  var peg$c44 = "int";
  var peg$c45 = "rational";
  var peg$c46 = "string";
  var peg$c47 = "logic";
  var peg$c48 = "void";
  var peg$c49 = "<";
  var peg$c50 = ">";
  var peg$c51 = "#";

  var peg$r0 = /^[a-zA-Z0-9._]/;
  var peg$r1 = /^[a-zA-Z_]/;
  var peg$r2 = /^[a-zA-Z0-9_]/;
  var peg$r3 = /^[^"{]/;
  var peg$r4 = /^[<->]/;
  var peg$r5 = /^[+\-]/;
  var peg$r6 = /^[*\/]/;
  var peg$r7 = /^[^"]/;
  var peg$r8 = /^[0-9]/;
  var peg$r9 = /^[ \t\n\r]/;
  var peg$r10 = /^[^\r\n]/;

  var peg$e0 = peg$literalExpectation("using", false);
  var peg$e1 = peg$literalExpectation("{", false);
  var peg$e2 = peg$literalExpectation("}", false);
  var peg$e3 = peg$literalExpectation("/", false);
  var peg$e4 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], ".", "_"], false, false);
  var peg$e5 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e6 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e7 = peg$literalExpectation("array", false);
  var peg$e8 = peg$literalExpectation("break", false);
  var peg$e9 = peg$literalExpectation("class", false);
  var peg$e10 = peg$literalExpectation("else", false);
  var peg$e11 = peg$literalExpectation("end", false);
  var peg$e12 = peg$literalExpectation("false", false);
  var peg$e13 = peg$literalExpectation("for", false);
  var peg$e14 = peg$literalExpectation("if", false);
  var peg$e15 = peg$literalExpectation("loop", false);
  var peg$e16 = peg$literalExpectation("Print", false);
  var peg$e17 = peg$literalExpectation("return", false);
  var peg$e18 = peg$literalExpectation("set", false);
  var peg$e19 = peg$literalExpectation("true", false);
  var peg$e20 = peg$literalExpectation("var", false);
  var peg$e21 = peg$literalExpectation(":", false);
  var peg$e22 = peg$literalExpectation("=", false);
  var peg$e23 = peg$literalExpectation(":=", false);
  var peg$e24 = peg$literalExpectation("(", false);
  var peg$e25 = peg$literalExpectation(")", false);
  var peg$e26 = peg$literalExpectation("[", false);
  var peg$e27 = peg$literalExpectation("]", false);
  var peg$e28 = peg$literalExpectation("then", false);
  var peg$e29 = peg$literalExpectation("..", false);
  var peg$e30 = peg$literalExpectation("\"", false);
  var peg$e31 = peg$classExpectation(["\"", "{"], true, false);
  var peg$e32 = peg$literalExpectation(".", false);
  var peg$e33 = peg$literalExpectation("Length", false);
  var peg$e34 = peg$literalExpectation("?", false);
  var peg$e35 = peg$literalExpectation("and", false);
  var peg$e36 = peg$literalExpectation("or", false);
  var peg$e37 = peg$literalExpectation(">=", false);
  var peg$e38 = peg$literalExpectation("<=", false);
  var peg$e39 = peg$classExpectation([["<", ">"]], false, false);
  var peg$e40 = peg$classExpectation(["+", "-"], false, false);
  var peg$e41 = peg$classExpectation(["*", "/"], false, false);
  var peg$e42 = peg$literalExpectation("not", false);
  var peg$e43 = peg$literalExpectation("+=", false);
  var peg$e44 = peg$literalExpectation("-=", false);
  var peg$e45 = peg$literalExpectation("*=", false);
  var peg$e46 = peg$literalExpectation("/=", false);
  var peg$e47 = peg$classExpectation(["\""], true, false);
  var peg$e48 = peg$literalExpectation("-", false);
  var peg$e49 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e50 = peg$literalExpectation(",", false);
  var peg$e51 = peg$literalExpectation("[]", false);
  var peg$e52 = peg$literalExpectation("float", false);
  var peg$e53 = peg$literalExpectation("int", false);
  var peg$e54 = peg$literalExpectation("rational", false);
  var peg$e55 = peg$literalExpectation("string", false);
  var peg$e56 = peg$literalExpectation("logic", false);
  var peg$e57 = peg$literalExpectation("void", false);
  var peg$e58 = peg$literalExpectation("<", false);
  var peg$e59 = peg$literalExpectation(">", false);
  var peg$e60 = peg$otherExpectation("whitespace");
  var peg$e61 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e62 = peg$literalExpectation("#", false);
  var peg$e63 = peg$classExpectation(["\r", "\n"], true, false);

  var peg$f0 = function(statements) { return Program(statements); };
  var peg$f1 = function(statement) {
 if (statement && typeof statement === 'object' && !statement.loc) {
 statement.loc = location();
 }
 return statement;
 };
  var peg$f2 = function(path) {
 const declaration = UsingDeclaration(path);
 declaration.loc = location();
 return declaration;
 };
  var peg$f3 = function(path) {
 return path;
 };
  var peg$f4 = function(h, t) {
 return { type: "Identifier", name: h + t.join('') };
 };
  var peg$f5 = function(name, varType, value) {
 return VariableDeclaration(name, varType, value);
 };
  var peg$f6 = function(name, value) {
 return ConstDeclaration(name, null, value);
 };
  var peg$f7 = function(name, constType, value) {
 return ConstDeclaration(name, constType, value);
 };
  var peg$f8 = function(name, parentClass, members) {
 return ClassDefinition(name, parentClass, members);
 };
  var peg$f9 = function(name, parentClass, members) {
 return ClassDefinition(name, parentClass, members);
 };
  var peg$f10 = function(name, arrayIndex, operator, value) {
 const target = arrayIndex ? ArrayAccess(name, arrayIndex[2]) : name;
 return SetStatement(target, operator, value);
 };
  var peg$f11 = function(value) {
 return PrintStatement(value);
 };
  var peg$f12 = function(condition, body, tail) {
 return IfStatement(condition, body, tail || []);
 };
  var peg$f13 = function(condition, body, tail) {
 return IfStatement(condition, body, tail || []);
 };
  var peg$f14 = function(condition, body, elseBody) {
 return IfStatement(condition, body, elseBody);
 };
  var peg$f15 = function(condition, body) {
 return IfStatement(condition, body, []);
 };
  var peg$f16 = function(condition, body, tail) {
 return [IfStatement(condition, body, tail || [])];
 };
  var peg$f17 = function(elseBody) {
 return elseBody;
 };
  var peg$f18 = function(variable, value) {
 return { type: "AssignmentExpression", variable: variable, value: value };
 };
  var peg$f19 = function(body) {
 return LoopStatement(body);
 };
  var peg$f20 = function(body) {
 return LoopStatement(body);
 };
  var peg$f21 = function(variable, start, end, body) {
 return ForStatement(variable, null, start, end, body);
 };
  var peg$f22 = function(variable, varType, start, end, body) {
 return ForStatement(variable, varType, start, end, body);
 };
  var peg$f23 = function(variable, start, end, body) {
 return ForStatement(variable, null, start, end, body);
 };
  var peg$f24 = function(variable, varType, start, end, body) {
 return ForStatement(variable, varType, start, end, body);
 };
  var peg$f25 = function(start, end) {
 return Range(start, end);
 };
  var peg$f26 = function() { return BreakStatement(); };
  var peg$f27 = function(parts) { return InterpolatedString(parts); };
  var peg$f28 = function(text) { return TextPart(text); };
  var peg$f29 = function(expr) {
 return InterpolatedExpression(expr);
 };
  var peg$f30 = function(left, operator, right) {
 return BinaryExpression(left, operator, right);
 };
  var peg$f31 = function(left, operator, right) {
 return BinaryExpression(left, operator, right);
 };
  var peg$f32 = function(left, operator, right) {
 return BinaryExpression(left, operator, right);
 };
  var peg$f33 = function(left, operator, right) {
 return BinaryExpression(left, operator, right);
 };
  var peg$f34 = function(operator, expression) {
 return UnaryExpression(operator, expression);
 };
  var peg$f35 = function(expression) {
 return { type: "ArrayLength", array: expression };
 };
  var peg$f36 = function(expression) {
 return UnaryExpression("?", expression);
 };
  var peg$f37 = function(expr) { return expr; };
  var peg$f38 = function() {
 return text();
 };
  var peg$f39 = function(value) { return StringLiteral(value); };
  var peg$f40 = function(value) { return IntegerLiteral(value); };
  var peg$f41 = function(value) { return FloatLiteral(value); };
  var peg$f42 = function() { return BooleanLiteral(true); };
  var peg$f43 = function() { return BooleanLiteral(false); };
  var peg$f44 = function(elements) {
 return ArrayLiteral(elements !== null ? elements : []);
 };
  var peg$f45 = function(head, tail) {
 return [head, ...tail.map(item => item[3])];
 };
  var peg$f46 = function(elementType) {
 return { type: "ArrayType", elementType };
 };
  var peg$f47 = function(array, index) {
 return { type: "ArrayAccess", array: array, index: index };
 };
  var peg$f48 = function(name) {
 return { type: "Type", name };
 };
  var peg$f49 = function(name, preEffects, parameters, postEffects, returnType, body) {
 return FunctionDeclaration(
 name,
 parameters || [],
 returnType,
 body,
 [...preEffects, ...postEffects]
 );
 };
  var peg$f50 = function(name, preEffects, parameters, postEffects, returnType, body) {
 return FunctionDeclaration(
 name,
 parameters || [],
 returnType,
 body,
 [...preEffects, ...postEffects]
 );
 };
  var peg$f51 = function(body) {
 return BraceBlock(body);
 };
  var peg$f52 = function(name) { return name.name; };
  var peg$f53 = function(head, tail) {
 return [head, ...tail.map(item => item[3])];
 };
  var peg$f54 = function(name, paramType) {
 return Parameter(name, paramType);
 };
  var peg$f55 = function(returnType) {
 return returnType;
 };
  var peg$f56 = function(name, args) {
 return FunctionCall(name, args || [], false);
 };
  var peg$f57 = function(name, args) {
 return FunctionCall(name, args || [], true);
 };
  var peg$f58 = function(head, tail) {
 return [head, ...tail.map(item => item[3])];
 };
  var peg$f59 = function(value) {
 return ReturnStatement(value);
 };
  var peg$f60 = function(functionCall) {
 return FunctionCallStatement(functionCall);
 };
  var peg$f61 = function(expression) {
 return ExpressionStatement(expression);
 };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0;

    s0 = peg$parseProgram();

    return s0;
  }

  function peg$parseProgram() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$parseTopLevelStatement();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseTopLevelStatement();
    }
    s3 = peg$parse_();
    peg$savedPos = s0;
    s0 = peg$f0(s2);

    return s0;
  }

  function peg$parseTopLevelStatement() {
    var s0;
